--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="app.js">
+
+
 </head>
 <body>
 	<h1>"This Test is Easy!"</h1>
@@ -16,24 +20,62 @@
 		
 		<div class="article">
 			<h2>Git Workflow</h2>
-			<p>When collabrating with a group on a project each indivdual would have to make their own branch. To make you branch you would use "git checkout "name"". You could also use this command to change branches. There will always be a master branch in which contains the final product of your project and which other branches should merge their work to. After making you branch and working on somethings you would push it up towards your branch by using "git push -origin "name" ". </p>
+			<p>When collabrating with a group on a project each indivdual would have to make their own branch. To make you branch you would use "git checkout "name"". You could also use this command to change branches. There will always be a master branch in which contains the final product of your project and which other branches should merge their work to. After making you branch and working on somethings you would push it up towards your branch by using "git push -origin "name" ". After pushing to your branch you would go to the GitHub website and make a pull request so that you can merge your work into the master branch </p>
 		</div>
 		
 
 		<div class="article">
 			<h2>Ways to Create a Responsive Web Design</h2>
 			<ul>
-				<li>using querys, like media query</li>
+				<li>Media Query - Setting a condtion in CSS so that when the width/height exceeds a certain size it keeps the divs in check</li>
+				<li>FlexBox</li>
+				<li>EM/Precentages - Setting precentages to the length, width, max-width, max-length</li>
+				<li>Bootstrap</li>
 				<li>Changing the divs position(relative/absolute)</li>
-				<li>Setting precentages to the length, width, max-width, max-length</li>
-				<li></li>
 			</ul>
 		</div>
 		
 
-		<div class="article", id="fourth">
+		<div id="fourth", class="article">
 			<h2>Arrays and Loops</h2>
-			<p>Arrays are pretty much multiply things in a single varaible represented with []. Loops are things we use to make the code run itself over and over again; one loop we learn is for loops, which we set 3 parameters for the varaibale i.</p>
+			<p>Arrays are pretty much multiple things in a single varaible represented with [ ]. Loops are things we use to make the code run itself over and over again; one loop we learn is for loops, which we set 3 parameters for the varaibale i.</p>
+
+
+			<script type="text/javascript">
+				var array = ["html", "javascript", "css", "coding"];
+				var numbersOrString = "C++";
+				array.pop();
+				document.write(array);
+			</script>
+
+
+			<script type="text/javascript">
+				var together;
+				function combine(array, numbersOrString) {
+					return array + numbersOrString;
+				}
+				document.write(together);
+			</script>
+
+
+			<script type="text/javascript">
+				var school = {
+					class: "boring",
+					teacher: "nice",
+					food: "trash",
+					education: "Quite Knowledgeable",
+				}
+				document.write(school);
+			</script>
+
+			<script type="text/javascript">
+				var nothing;
+				function extraCredit() { 
+ 				return Math.floor(Math.random() * array.length)
+ 				}
+ 				document.write(nothing);
+			</script>
+
 		</div>
 
 
